# UniDB

./: CMakeLists.txt  main.cpp
engine/: Command.cpp  Command.h  ExecutionEngine.cpp  ExecutionEngine.h  TransactionStack.cpp  TransactionStack.h
models/: Student.cpp  Student.h
parser/: QueryParser.cpp  QueryParser.h
storage/: ArrayCollection.cpp  ArrayCollection.h  Collection.cpp  Collection.h  LinkedListCollection.cpp  LinkedListCollection.h
